# jietu

./: .gitignore  README.md  pyproject.toml  update.ps1  升级.bat
.cursor/rules/: push-after-changes.mdc
.github/workflows/: bump-version.yml
jietu/: __main__.py  annotator.py  app.py  capture.py  hotkey.py  settings.py  startup.py  translator.py  updater.py  upgrade.py  viewer.py  watchdog.py
