[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jietu"
version = "0.1.17"
description = "极简截图工具：钉住桌面、标注、OCR翻译"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "mss>=9.0",
    "Pillow>=10.0",
    "numpy>=1.21",
    "deep-translator>=1.11",
    "pynput>=1.7",
    # OCR backend is platform-specific:
    #   Windows/Linux → easyocr (uses torch, which has wheels there)
    #   macOS → ocrmac (native Vision framework, no torch — torch has no
    #           Intel-Mac / py3.13 wheels)
    "easyocr>=1.7; platform_system != 'Darwin'",
    "ocrmac>=0.9; platform_system == 'Darwin'",
]

[project.scripts]
jietu = "jietu.__main__:main"
jietu-daemon = "jietu.watchdog:main"

[tool.hatch.build.targets.wheel]
packages = ["jietu"]
